# marvelous-databricks-course-netojoseaugusto

./: .gitignore  .pre-commit-config.yaml  databricks.yml  logging_config.py  project_config.yml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
notebooks/: intermediate_notebook.py  loans-0.0.1-py3-none-any.whl  prettier_notebook.py  starter_notebook.py
notebooks/week1/: intermediate_notebook.py  prettier_notebook.py  starter_notebook.py
notebooks/week2/: 01.prepare_dataset.py  02.mlflow_experiment.py  03.log_and_register_model.py  04.log_and_register_custom_model.py  05.log_and_register_fe_model.py  mlflow_experiment.json  model_version.json  run_info.json
notebooks/week3/: 01.feature_serving.py  02.model_serving.py  03.model_serving_feature_lookup.py  04.AB_test_model_serving.py
src/loans/: data_processor.py  helpers.py  predict_loans.py
tests/: test_evaluate.py  test_loans.py
